# metla-notifier

./: .gitignore  Dockerfile  db.py  ma2tg.py  main.py  metalarea.py  pyproject.toml  release.py  tgbot.py
.github/workflows/: building.yml  running.yml
