[tool.poetry]
name = "metla-notifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.2"
selenium = "^3.141.0"
bs4 = "^0.0.1"
pyTelegramBotAPI = "^3.8.2"
pysqlite3 = "^0.4.6"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
