[tool.poetry]
name = "metla-notifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.9.2"
bs4 = "^0.0.1"
pyTelegramBotAPI = "^3.8.2"
playwright = "^1.14.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
